Remove warning text from document flow to prevent jumping when it appears

--- a/styles/partials/globals.scss
+++ b/styles/partials/globals.scss
@@ -83,6 +83,7 @@ option {
 .section-content {
     margin: auto;
     text-align: center;
+    position: relative;
 }
 
 .scroll-button {
