--- a/styles/partials/time-section.scss
+++ b/styles/partials/time-section.scss
@@ -41,6 +41,7 @@ input[type=submit] {
 .submit-warning {
     @extend .failure-accent;
     font-size: 2.4rem;
+    position: absolute;
 
     @media (max-width: 480px) {
         font-size: 2rem;
